# weather

./: .gitignore  ReadMe.md
backend/: .env.secret  .env.share  activate  app.py  cities.json  pyproject.toml
backend/api/: __init__.py  city.py  weather.py
backend/exceptions/: __init__.py  errors.py  exception.py
backend/service/: __init__.py  city.py  weather.py
backend/tests/: __init__.py  test_city_service.py  test_weather_service.py
backend/utils/: __init__.py  dict_cache.py
frontend/: .env  package.json
frontend/src/: App.css  App.js  iconfont.css  weather.js
